# SmartBuy

./: .env.example  App.js  Dashboard.css  README.md  productRoutes.js  server.js
smartbuy-backend/: .env.example  .gitignore  alembic.ini  package.json  pyproject.toml  requirements.txt  schema.sql  seed_data.py  server.js
smartbuy-backend/alembic/: env.py
smartbuy-backend/alembic/versions/: 001_initial_schema.py  002_add_google_product_id.py  003_widen_google_product_id.py  004_add_email_to_price_alerts.py  005_add_ai_summary_to_products.py  006_create_chat_tables.py
smartbuy-backend/app/: config.py  database.py  main.py  scheduler.py
smartbuy-backend/app/auth/: dependencies.py  routes.py
smartbuy-backend/app/ml/: price_predictor.py  trend_analyzer.py
smartbuy-backend/app/models/: __init__.py  base.py  chat_message.py  chat_session.py  coupon.py  price_alert.py  price_prediction.py  price_record.py  product.py  schemas.py  search_history.py
smartbuy-backend/app/routes/: alerts.py  chat.py  coupons.py  prices.py  products.py
smartbuy-backend/app/scrapers/: amazon.py  base.py  coupon_scraper.py  croma.py  flipkart.py  google_shopping.py  manager.py
smartbuy-backend/app/services/: ai_service.py  coupon_service.py  email_service.py  price_service.py  product_service.py  verdict_service.py
smartbuy-frontend/: .env.example  .gitignore  Dashboard.js  next.config.ts  package-lock.json  package.json
smartbuy-frontend/src/app/: globals.css  layout.tsx  page.tsx
smartbuy-frontend/src/components/: AIChatWidget.tsx  AIProductSummary.tsx  AlertForm.tsx  (+13 more)
(+25 files in other folders)
